Added higher maxPermSize to prevent PermGen Exception due to multiple OSGi instances