@@ -82,7 +82,9 @@
 				</executions>
 				<configuration>
 					<executable>java</executable>
-					<arguments>
+                                        <arguments>
+                                                <argument>-Xmx1024m</argument>
+                                                <argument>-XX:MaxPermSize=256m</argument>
 						<argument>-cp</argument>
 						<classpath />
 						<argument>org.backmeup.embedded.Main</argument>
@@ -116,6 +118,8 @@
 							<executable>java</executable>
 							<arguments>
 								<!-- start the VM in debug mode -->
+                                                                <argument>-Xmx1024m</argument>
+                                                                <argument>-XX:MaxPermSize=256m</argument>
 								<argument>-Xdebug</argument>
 								<argument>-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=1044</argument>
 								<argument>-cp</argument>
